feat: Added controllers and services for important models
